--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                             <div class="ml-lg-auto col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="700">
                                 <div class="team-thumb">
-                                    <img src="images/team/team-image.jpg" class="img-fluid" alt="Trainer">
+                                    <img src="images/team/team-image.webp" class="img-fluid" alt="Trainer">
 
                                     <div class="team-info d-flex flex-column">
 
@@ -168,7 +168,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                             <div class="mr-lg-auto mt-5 mt-lg-0 mt-md-0 col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="800">
                                 <div class="team-thumb">
-                                    <img src="images/team/team-image01.jpg" class="img-fluid" alt="Trainer">
+                                    <img src="images/team/team-image01.webp" class="img-fluid" alt="Trainer">
 
                                     <div class="team-info d-flex flex-column">
 
@@ -201,7 +201,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                             <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="400">
                                 <div class="class-thumb">
-                                    <img src="images/class/yoga-class.jpg" class="img-fluid" alt="Class">
+                                    <img src="images/class/yoga-class.webp" class="img-fluid" alt="Class">
 
                                     <div class="class-info">
                                         <h3 class="mb-1">Yoga</h3>
@@ -217,7 +217,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                             <div class="mt-5 mt-lg-0 mt-md-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="500">
                                 <div class="class-thumb">
-                                    <img src="images/class/crossfit-class.jpg" class="img-fluid" alt="Class">
+                                    <img src="images/class/crossfit-class.webp" class="img-fluid" alt="Class">
 
                                     <div class="class-info">
                                         <h3 class="mb-1">Areobic</h3>
@@ -233,7 +233,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                             <div class="mt-5 mt-lg-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="class-thumb">
-                                    <img src="images/class/cardio-class.jpg" class="img-fluid" alt="Class">
+                                    <img src="images/class/cardio-class.webp" class="img-fluid" alt="Class">
 
                                     <div class="class-info">
                                         <h3 class="mb-1">Cardio</h3>
